Increase heap size and add flags for Java 8 (#328)
* Increase heap size and add flags for Java 8

* Simplify adding memory flag

* test assertions

* fixup! test assertions

* fixup! fixup! test assertions